<resources>
    <string name="app_name">PasseGares</string>
    <string name="position">Position actuelle :</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="precision">Précision</string>
    <string name="nomGare">Station la plus proche</string>
    <string name="naDistance">- m</string>
    <string name="tamponner">Tamponner</string>
    <string name="voirTampon">Tampons</string>
    <string name="aucuneGareProche">Aucune station à proximité</string>
    <string name="localisationImpossible">Localisation impossible pour le moment</string>
    <string name="title_activity_preference">Préférences</string>
    <string name="preferences">Préférences</string>
    <string name="preferenceIntervalleActualisationTitle">Intervalle d\'actualisation du GPS</string>
    <string name="preferenceIntervalleActualisationSummary">En secondes (entre 0 et 30)</string>
    <string name="boutonLocalisationSouterrain">Localisation en souterrain</string>
    <string name="labelLac">Lac</string>
    <string name="labelCid">Cid</string>
    <string name="titre_tampon">ligne visitée en tout</string>
    <string name="titre_tampons">lignes visitées en tout</string>
    <string name="titre_tampon_du_jour">ligne visitée ce jour</string>
    <string name="titre_tampons_du_jour">lignes visitées ce jour</string>
    <string name="voirTousTampons">Liste des stations</string>
    <string name="tousTampon">station en tout</string>
    <string name="tousTampons">stations en tout</string>
    <string name="tousTamponDuJour">gare ce jour</string>
    <string name="tousTamponsDuJour">gares ce jour</string>
    <string name="correspondances">Correspondances</string>
    <string name="validations">Validations</string>
    <string name="activerNotification">Notification</string>
    <string name="voirTamponsToujours">Tous les tampons</string>
    <string name="voirTamponDuJour">Tampons du jour</string>
    <string name="localisationEnCours">Localisation en cours</string>
    <string name="dialogVidageBDDTitre">Voulez-vous vraiment réinitialiser la base de données ?</string>
    <string name="dialogVidageBDDExplication">Cela peut prendre quelques secondes, irréversible !</string>
    <string name="dialogReinitGDLTitre">Voulez-vous vraiment réinitialiser l\'association des gares et des lignes ?</string>
    <string name="dialogReinitGDLExplication">Cela peut prendre quelques secondes, aucune perte de donnée !</string>
    <string name="dialogReinitGDLSuppressionEnCours">Réinitialisation en cours…</string>
    <string name="boutonEffacer">Effacer</string>
    <string name="boutonReinit">Réinitialiser</string>
    <string name="boutonAnnuler">Annuler</string>
    <string name="dialogVidageBDDSuppressionEnCours">Suppression en cours…</string>
    <string name="niveau">Niveau</string>
    <string name="evoluerGare">Améliorer la gare</string>
    <string name="prendreTicket">Prendre un ticket</string>
    <string name="niveauNull">Niveau -</string>
    <string name="labelTicket">ticket</string>
    <string name="porteTicket">Porte-Ticket</string>
    <string name="jeterTicketQuestion">Combien de tickets voulez-vous jeter ?</string>
    <string name="boutonJeter">Jeter</string>
    <string name="dialogMiseAJourTitle">Nouveautés</string>
    <string name="boutonDAccord">D\'accord</string>
    <string name="planLigne">Plan de ligne</string>
    <string name="preferenceNouvelleInterfaceVisaTitle">Nouvelle interface des tampons</string>
    <string name="derniereValidation">Dernière validation :</string>
    <string name="nombreTicket"><![CDATA[Tickets : ]]></string>
    <string name="boutonValider">Valider</string>
    <string name="tampon">tampon</string>
    <string name="tampons">tampons</string>
    <string name="evolutionLabel">Coût de l\'évolution</string>
    <string name="zero">0</string>
    <string name="demandeLabel">Nécessite</string>
    <string name="fournitLabel">Fournit</string>
    <string name="derniereValidationLabel">Dernière validation</string>
    <string name="nouvelleRegionInstalle">Merci de choisir la nouvelle région à installer</string>
    <string name="dialogAjoutRegionTitre">Ajouter une région</string>
    <string name="dialogAjoutRegionExplication">Êtes-vous sûr de vouloir ajouter cette région dans PasseGares ? Attention, ceci est irréversible !</string>
    <string name="dialogAjoutRegionEnCours">Installation en cours</string>
    <string name="premierDemarrageChoixRegion">Bienvenue dans PasseGares ! Pour commencer, sélectionnez les régions dont vous voulez installer les gares. Une fois terminé, appuyez sur retour.</string>
    <string name="exportDemanderPermission">Autorisez l\'application a écrire des fichiers, puis renouveller l\'opération.</string>
    <string name="exportMessageSucces">La base de données a été exporté à l\'adresse :</string>
    <string name="exportMessageErreur">Une erreur a eu lieu lors de l\'export de la base de données.</string>
    <string name="importMessageSucces">La base de données a été importé avec succès.</string>
    <string name="importMessageErreur">Une erreur a eu lieu lors de l\'import de la base de données.</string>
    <string name="preferenceAjoutRegionTitle">Ajouter des régions</string>
    <string name="preferenceAjoutRegionSummary">Ajouter de nouvelles régions dans PasseGares !</string>
    <string name="preferencePreferencesAvanceesTitle">Paramètres avancées</string>
    <string name="preferenceVersionAPKTitle">Version de l\'application</string>
    <string name="preferenceIconeCreditsTitle">Crédits et mentions</string>
    <string name="preferenceIconeCreditsSummary">et autres joyeusetés</string>
    <string name="preferenceExportBDDTitle">Exporter la base de données</string>
    <string name="preferenceExportBDDSummary">Permet de réaliser une sauvegarde des données</string>
    <string name="preferenceImportBDDTitle">Importer la base de données</string>
    <string name="preferenceImportBDDSummary">Permet d\'importer une sauvegarde des données</string>
    <string name="preferenceViderBDDTitle">Réinitialiser la base de données</string>
    <string name="preferenceViderBDDSummary">Efface tous les tampons !</string>
    <string name="preferenceReinitGDLTitle">Réinitialiser l\'association des gares et des lignes</string>
    <string name="preferenceReinitGDLSummary">À utiliser en cas de gares manquantes dans l\'affichage des tampons</string>
    <string name="creerBoutique">Ouvrir une boutique</string>
    <string name="nomBoutiqueLabel">Nom boutique</string>
    <string name="voirBoutique">Visiter la boutique</string>
    <string name="totalTicketsSelectionnes">Total</string>
    <string name="Cout">Coût</string>
    <string name="choisirTicket">Merci d\'effectuer le payement</string>
    <string name="achatTitle">Acheter un objet</string>
    <string name="objetSpecialExtensionPorteTicket">Extension de porte tickets</string>
    <string name="selectionTickets">Choisir le nombre de tickets</string>
    <string name="nbTicketsUtiliser">Choisir le nombre de tickets à utiliser</string>
    <string name="boutonSelectionner">Sélectionner</string>
    <string name="boutonAcheter">Acheter</string>
    <string name="succesAchatEffectue">Achat effectué avec succès</string>
    <string name="distance">Distance</string>
    <string name="boutiqueOuvertureConfirmation">Boutique ouverte avec succès</string>
    <string name="evolutionGareNiveauMax">Pas d\'autre amélioration disponible</string>
    <string name="evolutionGareNiveauPlusUnConfirmation">Voici les ressources nécessaires pour passer la gare au niveau</string>
    <string name="evolutionGareNiveauUnPasAssez">Tamponner au moins 3 fois la gare pour pouvoir la faire passer au niveau 1 (actuellement %d validation)</string>
    <string name="evolutionGareNiveauUnPasAssezS">Tamponner au moins 3 fois la gare pour pouvoir la faire passer au niveau 1 (actuellement %d validations)</string>
    <string name="afficherFournit">Tickets fournis</string>
    <string name="afficherNecessite">Tickets nécessaires</string>
    <string name="afficherNiveau">Niveaux</string>
    <string name="voirSucces">Succès</string>
    <string name="succesLabelGareNiveau1">10 gares tamponnées</string>
    <string name="succesLabelGareNiveau2">25 gares tamponnées</string>
    <string name="succesLabelGareNiveau3">50 gares tamponnées</string>
    <string name="succesLabelGareNiveau4">100 gares tamponnées</string>
    <string name="succesLabelGareNiveau5">200 gares tamponnées</string>
    <string name="succesLabelGareNiveau6">300 gares tamponnées</string>
    <string name="succesLabelGareNiveau7">500 gares tamponnées</string>
    <string name="succesLabelLigneNiveau1">1 ligne complétée</string>
    <string name="succesLabelLigneNiveau2">2 lignes complétées</string>
    <string name="succesLabelLigneNiveau3">3 lignes complétées</string>
    <string name="succesLabelLigneNiveau4">5 lignes complétées</string>
    <string name="succesLabelLigneNiveau5">10 lignes complétées</string>
    <string name="succesLabelLigneNiveau6">15 lignes complétées</string>
    <string name="succesLabelLigneNiveau7">20 lignes complétées</string>
    <string name="succesLabelValidationNiveau1">Gare tamponnée 5 fois</string>
    <string name="succesLabelValidationNiveau2">Gare tamponnée 10 fois</string>
    <string name="succesLabelValidationNiveau3">Gare tamponnée 25 fois</string>
    <string name="succesLabelValidationNiveau4">Gare tamponnée 50 fois</string>
    <string name="succesLabelValidationNiveau5">Gare tamponnée 100 fois</string>
    <string name="succesLabelNonAffiche">\???</string>
    <string name="succesLabelValide">Atteint</string>
    <string name="succesLabelNonValide">Non atteint</string>
    <string name="boutiqueLabel">Boutique</string>
    <string name="boutiqueNull">Boutique -</string>
    <string name="ouvrirCarte">Ouvrir la carte</string>
    <string name="tempsRelatifSeconde">Il y a %1$d seconde</string>
    <string name="tempsRelatifSecondes">Il y a %1$d secondes</string>
    <string name="tempsRelatifMinute">Il y a 1 minute</string>
    <string name="tempsRelatifMinuteSec">Il y a 1 minute %1$s sec</string>
    <string name="tempsRelatifMinutes">Il y a %1$d minutes</string>
    <string name="tempsRelatifMinutesSec">Il y a %1$d minutes %2$s sec</string>
    <string name="tempsRelatifHeure">Il y a 1 heure</string>
    <string name="tempsRelatifHeureMin">Il y a 1 heure %1$s min</string>
    <string name="tempsRelatifHeures">Il y a %1$d heures</string>
    <string name="tempsRelatifHeuresMin">Il y a %1$d heures %2$s min</string>
    <string name="tempsRelatifJour">Il y a 1 jour</string>
    <string name="tempsRelatifJourH">Il y a 1 jour, %1$dh%2$s</string>
    <string name="tempsRelatifJours">Il y a %1$d jours</string>
    <string name="tempsRelatifJoursH">Il y a %1$d jours, %2$dh%3$s</string>
    <string name="radar">PasseGares</string>
    <string name="voirTickets">Tickets</string>
    <string name="premier_lancement_ecran1_titre">Bienvenue dans PasseGares.</string>
    <string name="premier_lancement_ecran1_description">PasseGares est une application pour toutes celles et ceux qui aiment voyager en train ! Entrez, prenez garde à la fermeture des portes, attention au départ. Quand vous êtes dans une gare, sortez votre téléphone et tamponnez-la.</string>
    <string name="premier_lancement_ecran2_titre">La localisation GPS est nécessaire</string>
    <string name="premier_lancement_ecran2_description">Pour fonctionner, PasseGares a besoin d\'avoir la localisation GPS de votre appareil. Rassurez-vous, elle ne quittera pas votre téléphone. L\'application n\'enverra jamais votre position via internet.</string>
</resources>