<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bottomnav_radar"
            android:icon="@drawable/ic_mainmenu_radar"
            android:title="@string/radar"
            android:checked="true" />

        <item
            android:id="@+id/bottomnav_tampon"
            android:icon="@drawable/ic_mainmenu_tampons"
            android:title="@string/voirTampon" />
        <item
            android:id="@+id/bottomnav_succes"
            android:icon="@drawable/ic_mainmenu_succes"
            android:title="@string/voirSucces" />
        <item
            android:id="@+id/bottomnav_tickets"
            android:icon="@drawable/fa_ticket"
            android:title="@string/voirTickets" />
    </group>

</menu>
