<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="24dp"
    android:theme="@android:style/Theme.Holo.Dialog">

    <TextView
        android:text="@string/evolutionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/evolutionLabel"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:paddingBottom="@dimen/activity_vertical_margin" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fa_ticket"
        android:id="@+id/iconTicket"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="left|fill_horizontal|start"
        android:layout_columnWeight="1"
        android:contentDescription="@string/labelTicket" />

    <TextView
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombreTicket"
        android:layout_column="1"
        android:layout_row="1"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textAlignment="textEnd"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal" />
</GridLayout>